POFIM-82 InntektsmeldingPdfDataMapper
Fikset at alle refusjonsperioder ble tatt med til pdf. Fjernet refusjonsbeløp da dette er en del av listen refusjonsperioder, og la til et felt som teller antall perioder. Dette for å kunne skille på tekst i pdfen.